timeseries tenor overlap bug

--- a/projects/OG-Web/web-engine/prototype/styles/common/details/og.common.OG-details.OG-timeseries.css
+++ b/projects/OG-Web/web-engine/prototype/styles/common/details/og.common.OG-details.OG-timeseries.css
@@ -19,7 +19,6 @@
     border-radius: 1px;
     z-index: 4;
     left: 0;
-    right: 0;
 }
 
 .OG-timeseries-gadget .og-plot-header .og-field {
